[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainView.gd" type="Script" id=1]
[ext_resource path="res://views/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://views/Settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://views/Results.tscn" type="PackedScene" id=4]
[ext_resource path="res://views/Game.tscn" type="PackedScene" id=5]

[node name="MainView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" parent="." instance=ExtResource( 2 )]

[node name="Settings" parent="." instance=ExtResource( 3 )]

[node name="Results" parent="." instance=ExtResource( 4 )]

[node name="Game" parent="." instance=ExtResource( 5 )]
manyKeys = true
isUpper = false
[connection signal="play_clicked" from="Menu" to="." method="_on_Menu_play_clicked"]
[connection signal="quit_clicked" from="Menu" to="." method="_on_Menu_quit_clicked"]
[connection signal="settings_clicked" from="Menu" to="." method="_on_Menu_settings_clicked"]
[connection signal="back_clicked" from="Settings" to="." method="_on_Settings_back_clicked"]
[connection signal="back_clicked" from="Results" to="." method="_on_Results_back_clicked"]
[connection signal="game_over" from="Game" to="." method="_on_Game_game_over"]
